// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Footer Component does not render when all slots are empty 1`] = `
<div>
  


</div>
`;

exports[`Footer Component renders with all attributes provided 1`] = `
<div>
  

  
  <footer
    class="ct-footer ct-theme-dark additional-class"
    data-component-name="ct-footer"
    role="contentinfo"
    style="background-image: url('path/to/image.jpg')"
  >
    

          
    <div
      class="container ct-footer__top"
    >
      
        
      <div
        class="row"
      >
        

                        
        <div
          class="col-xxs-12 col-m-6"
        >
          
                
          <div
            class="ct-footer__top__content-top1"
          >
            Top content 1
          </div>
          
              
        </div>
        
            
                        
        <div
          class="col-xxs-12 col-m-6"
        >
          
                
          <div
            class="ct-footer__top__content-top2"
          >
            Top content 2
          </div>
          
              
        </div>
        
            
        
      </div>
      
      
    </div>
    
    
          
    <div
      class="container ct-footer__middle"
    >
      
        
      <div
        class="row"
      >
        

                        
        <div
          class="col-xxs-12 col-m-3"
        >
          
                
          <div
            class="ct-footer__middle__content-middle1"
          >
            Middle content 1
          </div>
          
              
        </div>
        
            
                        
        <div
          class="col-xxs-12 col-m-3"
        >
          
                
          <div
            class="ct-footer__middle__content-middle2"
          >
            Middle content 2
          </div>
          
              
        </div>
        
            
                        
        <div
          class="col-xxs-12 col-m-3"
        >
          
                
          <div
            class="ct-footer__middle__content-middle3"
          >
            Middle content 3
          </div>
          
              
        </div>
        
            
                        
        <div
          class="col-xxs-12 col-m-3"
        >
          
                
          <div
            class="ct-footer__middle__content-middle4"
          >
            Middle content 4
          </div>
          
              
        </div>
        
            
                        
        <div
          class="col-xxs-12"
        >
          
                
          <div
            class="ct-footer__middle__content-middle5"
          >
            Middle content 5
          </div>
          
              
        </div>
        
            
        
      </div>
      
      
    </div>
    
    
          
    <div
      class="container ct-footer__bottom"
    >
      
        
      <div
        class="row"
      >
        

                        
        <div
          class="col-xxs-12 col-m-7"
        >
          
                
          <div
            class="ct-footer__bottom__content-bottom1"
          >
            Bottom content 1
          </div>
          
              
        </div>
        
            
                        
        <div
          class="col-xxs-12 col-m-5"
        >
          
                
          <div
            class="ct-footer__bottom__content-bottom2"
          >
            Bottom content 2
          </div>
          
              
        </div>
        
            
        
      </div>
      
      
    </div>
    
    
  
  </footer>
  

</div>
`;

exports[`Footer Component renders with some attributes missing 1`] = `
<div>
  

  
  <footer
    class="ct-footer ct-theme-light "
    data-component-name="ct-footer"
    role="contentinfo"
  >
    

          
    <div
      class="container ct-footer__top"
    >
      
        
      <div
        class="row"
      >
        

                        
        <div
          class="col-xxs-12 col-m-6"
        >
          
                
          <div
            class="ct-footer__top__content-top1"
          >
            Top content 1
          </div>
          
              
        </div>
        
            
          
        
      </div>
      
      
    </div>
    
    
          
    <div
      class="container ct-footer__middle"
    >
      
        
      <div
        class="row"
      >
        

          
                        
        <div
          class="col-xxs-12 col-m-3"
        >
          
                
          <div
            class="ct-footer__middle__content-middle2"
          >
            Middle content 2
          </div>
          
              
        </div>
        
            
          
          
          
        
      </div>
      
      
    </div>
    
    
          
    <div
      class="container ct-footer__bottom"
    >
      
        
      <div
        class="row"
      >
        

                        
        <div
          class="col-xxs-12 col-m-7"
        >
          
                
          <div
            class="ct-footer__bottom__content-bottom1"
          >
            Bottom content 1
          </div>
          
              
        </div>
        
            
          
        
      </div>
      
      
    </div>
    
    
  
  </footer>
  

</div>
`;
